# jp2k-decoder-android

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  coverage_filtered.info  gcov_output.txt  test_wrapper.c.gcov  test_wrapper_cov  wrapper.c  wrapper.c.gcov
.github/: dependabot.yml
.github/workflows/: build.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: karin.jp2
android/app/src/main/java/dev/keiji/j2k_wasm_sample/: MainActivity.kt
android/app/src/main/java/dev/keiji/j2k_wasm_sample/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: build.gradle.kts
android/lib/src/androidTest/java/dev/keiji/jp2k/: ExampleInstrumentedTest.kt  Jp2kDecoderAsyncTest.kt  Jp2kDecoderAsyncValidationTest.kt  Jp2kDecoderTest.kt  Jp2kDecoderValidationTest.kt
android/lib/src/main/assets/: openjpeg_core.wasm
android/lib/src/main/java/dev/keiji/jp2k/: Callback.kt  ColorFormat.kt  Config.kt  Constants.kt  Jp2kDecoder.kt  Jp2kDecoderAsync.kt  Jp2kError.kt  Jp2kSandbox.kt  MemoryUsage.kt  RegionOutOfBoundsException.kt  Size.kt  State.kt
android/lib/src/test/java/dev/keiji/jp2k/: ExceptionTest.kt  Jp2kDecoderAsyncCoverageTest.kt  Jp2kDecoderAsyncTest.kt  Jp2kDecoderTest.kt  Jp2kEmptyStringTest.kt  Jp2kOverloadsTest.kt  Jp2kSandboxTest.kt  TestUtils.kt
docs/: coverage_fix_plan.md  design.md
sample/: settings.gradle.kts
sample/app/: build.gradle.kts
sample/app/src/androidTest/java/dev/keiji/j2k_wasm_sample/: ExampleInstrumentedTest.kt
sample/app/src/main/assets/: openjpeg_core.wasm
sample/app/src/main/java/dev/keiji/j2k_wasm_sample/: MainActivity.kt
sample/app/src/main/res/values/: themes.xml
sample/app/src/test/java/dev/keiji/j2k_wasm_sample/: ExampleUnitTest.kt
sample/gradle/: libs.versions.toml
sample/lib/src/main/assets/: openjpeg_core.wasm
sample/lib/src/main/java/dev/keiji/jp2k/: Jp2kDecoder.kt
sample/lib/src/test/java/dev/keiji/jp2k/: ExampleUnitTest.kt
test/: emscripten.h  malloc_hook.c  opj_config.h  run_coverage.sh  run_tests.sh  stubs.c  test_wrapper.c
